# sim-to-data

./: .gitignore  Makefile  README.md  modal_coral.py  modal_train.py  pyproject.toml
.github/workflows/: ci.yml
configs/: cost_matrix.yaml  model_cnn1d.yaml  model_spec2d.yaml  simulator.yaml
docs/: sim_to_real.md
docs/plans/: 2026-03-27-sim-to-data-design.md  2026-03-27-sim-to-data-implementation.md  2026-03-30-ext2-gradcam-design.md  2026-03-30-ext2-gradcam-plan.md  2026-03-30-v3-deployment-readiness-design.md  2026-03-30-v3-deployment-readiness-plan.md
experiments/: aggregate_multiseed.py  generate_figures.py  generate_gradcam_figures.py  generate_sim_to_real_figures.py  generate_v3_figures.py  run_adaptation_curve.py  run_all.py  run_baselines.py  run_classification.py  run_conformal.py  run_coral.py  run_cost_analysis.py  run_multiseed.py  run_robustness.py  run_sim_to_real.py
results/multiseed/: aggregated.json
src/simtodata/adaptation/: coral.py
src/simtodata/data/: bscan_dataset.py  constants.py  dataset.py  generate.py  transforms.py  (+1 more)
tests/: conftest.py  test_baselines.py  test_benchmark_smoke.py  test_bscan_cnn.py  test_bscan_dataset.py  test_bscan_generator.py  test_calibration.py  test_conformal.py  test_constants.py  test_coral.py  test_cost_framework.py  test_dataset.py  test_features.py  test_forward_model.py  test_interpretability.py  test_metrics.py  test_model_cnn1d.py  test_model_cnn2d.py  test_noise.py  test_onnx_export.py  test_pipeline_integration.py  test_regime.py  test_train_predict.py  test_transforms.py  test_virkkunen_loader.py
(+22 files in other folders)
