[project]
name = "simtodata"
version = "0.1.0"
description = "Synthetic ultrasonic inspection pipeline for defect detection under domain shift"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
    "joblib>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
